fixed heading, footer, and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,25 +7,25 @@ img {
 	width: 100%;
 }
 a:hover {
-	color: #D7AE98;
+    color: #fff;
 	font-style: italic;
-	text-decoration: none;
-}
-footer {
-	background-color: #90785E;
-	border-top: 6px solid #D7AE98;
-	bottom: 0;
-	color: #fff;
-	font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 12px;
-	height: 90px;
-	text-align: center;
-    width: 100%;
-    margin-bottom: 0;
 }
 p {
-	font-family: 'Barlow', Arial, 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
+    font-family: 'Barlow', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 18px;
+    margin: 30px;
+}
+footer {
+    background-color: #90785E;
+    border-top: 6px solid #D7AE98;
+    color: #fff;
+    font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 12px;
+    height: 80px;
+    width: 100%; 
+    position: fixed;
+    bottom: 0;
+    
 }
 ul {
 	margin-left: 40%;
@@ -39,9 +39,23 @@ h2 {
 hr {
 	background-color: #D7AE98;
 	border-style: none;
-	height: 2px;
+	height: 3px;
 	position: center;
 	width: 100%;
+}
+#resumeLink {
+    color: #D7AE98;
+    text-decoration: underline;
+}
+.container {
+    background-color: #fff;
+    border-radius: 4px;
+    margin-bottom: 50px auto;
+}
+.bg {
+    width: 80%;
+    margin: 40px auto;
+    margin-top: -30px;
 }
 .btn {
 	background-color: #A9876F;
@@ -50,18 +64,15 @@ hr {
 	height: 5%;
 	width: 10%;
 }
-.container {
-	background-color: #fff;
-	border-radius: 4px;
-}
 .col-lg-6 {
-	padding: 40px;
+    padding: 40px;
+    
 }
 .shadow {
 	margin-bottom: 100px;
 	margin-top: 20px;
 	padding-bottom: 40px;
-}
+} 
 .socialMedia {
 	color: #A9876F;
 	text-decoration: underline;
@@ -73,7 +84,7 @@ hr {
 .card-body {
 	background-color: #A9876F;
 	color: #A9876F;
-	text-align: center;
+    text-align: center;
 }
 .card-header {
 	background-color: #fff;
@@ -88,9 +99,12 @@ hr {
 	padding: 20px;
 }
 .nav-link-selected {
-	color: #D7AE98;
+    color: #fff;
 	font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
-	padding: 20px;
+    padding: 20px;
+    font-size: 17px;
+    font-style: oblique;
+    color: #D7AE98;
 }
 .projectLinks {
 	background-color: #A9876F;
@@ -102,35 +116,35 @@ hr {
 }
 .copyright {
     font-size: 12px;
+    margin-top: 0;
 }
-#name {
+.name {
 	font-family: 'Playfair Display SC', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 30px;
-	margin-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 	text-align: center;
 }
-#jenmitz {
+.jenmitz {
 	float: left;
 	height: 230px;
 	padding-right: 20px;
 	width: 185px;
 }
-#gitHubLink {
-	height: 58px;
-	margin: 5px;
-	padding: 5px;
+.gitHubLink {
+	height: 35px;
 	padding-top: 10px;
-    width: 51px;
+    width: 28px;
 }
-#linkedInLink {
-	height: 50px;
+.linkedInLink {
+	height: 33px;
 	margin: 5px;
 	padding: 5px;
 	padding-bottom: 0;
 	padding-top: 10px;
-	width: 50px;
+	width: 32px;
 }
-#header {
+.header {
 	background-color: #90785E;
 	border-bottom: 6px solid #D7AE98;
 	color: #fff;
@@ -138,5 +152,28 @@ hr {
 	font-size: 90%;
 	height: 100px;
 	text-align: center;
-	width: 100%;
+    width: 100%;
+   
 }
+
+@media (max-width: 420px) {
+    .nav-link {
+        font-size: 10px;
+    }   
+    .nav-link-selected {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 354px) {
+    .name {
+        font-size: 14px;
+    }
+    .nav-link {
+        padding: none;
+    }   
+    .nav-link-selected {
+        padding: none;
+    }
+}
+/* 375 x 812 (iphone x screen) isn't good - small sizes need to be fixed (links mainly) */
